// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource/ViewButton View 1`] = `
<div>
  <button
    aria-label="View YAML"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1d2b2o6-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    <span />
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots Resource/ViewButton View Open 1`] = `
<div
  aria-hidden="true"
>
  <button
    aria-label="View YAML"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1d2b2o6-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
  >
    <span />
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
